// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ReferenceSelect /> should render 1`] = `
<ReferenceSelect__StyledReferenceSelect>
  <label>
    Source Reference
  </label>
  <ReferenceSelect__ReferenceSelectList>
    <ReferenceSelectItem
      active={false}
      key="foo"
      onClick={[Function]}
      reference={
        Object {
          "id": "foo",
          "key": "bar",
        }
      }
    />
  </ReferenceSelect__ReferenceSelectList>
  <Input__InputError />
</ReferenceSelect__StyledReferenceSelect>
`;

exports[`<ReferenceSelect /> should render NoneFound when [references.length=0] 1`] = `
<ReferenceSelect__StyledReferenceSelect>
  <label>
    Source Reference
  </label>
  <ReferenceSelect__ReferenceSelectList>
    <NoneFoundSection
      noun="source references"
    />
  </ReferenceSelect__ReferenceSelectList>
  <Input__InputError />
</ReferenceSelect__StyledReferenceSelect>
`;
